force-app/main/default/objects/SalesforceDocSendTracking__x/SalesforceDocSendTracking__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceDocSendTracking</externalName>
    <label>Comunicazione Documentale Salesforce</label>
    <pluralLabel>Comunicazioni Documentale Salesforce</pluralLabel>
</CustomObject>