force-app/main/default/objects/SalesforceDocSendTracking__x/fields/OrderC__c.field-meta.xml
<CustomField>
    <fullName>OrderC__c</fullName>
    <description>OrderC</description>
    <externalDeveloperName>OrderC</externalDeveloperName>
    <label>OrderC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>