force-app/main/default/objects/SalesforceDocSendTracking__x/fields/ReadDateC__c.field-meta.xml
<CustomField>
    <fullName>ReadDateC__c</fullName>
    <description>ReadDateC</description>
    <externalDeveloperName>ReadDateC</externalDeveloperName>
    <label>ReadDateC</label>
    <type>DateTime</type>
</CustomField>