force-app/main/default/objects/SalesforceDocSendTracking__x/fields/SendDateC__c.field-meta.xml
<CustomField>
    <fullName>SendDateC__c</fullName>
    <description>SendDateC</description>
    <externalDeveloperName>SendDateC</externalDeveloperName>
    <label>Data invio</label>
    <type>DateTime</type>
</CustomField>