force-app/main/default/objects/SalesforceDocSendTracking__x/fields/SenderC__c.field-meta.xml
<CustomField>
    <fullName>SenderC__c</fullName>
    <description>SenderC</description>
    <externalDeveloperName>SenderC</externalDeveloperName>
    <label>Mittente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>